--- a/config/database.yml
+++ b/config/database.yml
@@ -50,6 +50,6 @@ test:
 #
 production:
   <<: *default
-  database: chat_app_production
-  username: chat_app
+  database: us-cdbr-iron-east-02.cleardb.net/heroku_f3ff170c73791a9
+  username: b3d6003046f3ec
   password: <%= ENV['DATABASE_PASSWORD'] %>
